# cco

./: .gitignore  CLAUDE.md  README.md  build_and_test.py  package.json  push.bat  push.sh  pyproject.toml  setup.py  specs4.2.md
.claude/: cco.js  memory.json  settings.local.json
cco/: __init__.py  cli.py
cco/templates/: CLAUDE.md  cco.js
ccom/: cli.py
docs/: README_v0.1.md  functional_specs4.1.md  tech_specs1.1.md
test-project/: .eslintrc.js  CLAUDE.md  index.js  package-lock.json  package.json
test-project/.claude/: memory.json
test-project/.husky/: pre-commit
